hotfix main path.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -1,5 +1,5 @@
 name: MobArena-ItemsAdder
 version: '${version}'
-main: com.shimincraft.mobarenaitemsadder.MobArena_ItemsAdder
+main: com.shimincraft.mobarenaitemsadder.MobArenaItemsAdder
 api-version: 1.19
 softdepend: [MobArena]
