Hofix method for loading, to ensure no race conditions occur.

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,4 +2,4 @@ name: MobArena-ItemsAdder
 version: '${version}'
 main: com.shimincraft.mobarenaitemsadder.MobArenaItemsAdder
 api-version: 1.19
-softdepend: [MobArena]
+softdepend: [ItemsAdder, MobArena]
