Completely change loading to wait for ItemsAdder event, due to race conditions

--- a/src/main/resources/plugin.yml
+++ b/src/main/resources/plugin.yml
@@ -2,4 +2,5 @@ name: MobArena-ItemsAdder
 version: '${version}'
 main: com.shimincraft.mobarenaitemsadder.MobArenaItemsAdder
 api-version: 1.19
-softdepend: [ItemsAdder, MobArena]
+load: STARTUP
+depend: [ItemsAdder, MobArena]
